Check to make sure that the form looks good on mobile and desktop. #1

--- a/css/layout.css
+++ b/css/layout.css
@@ -8,7 +8,8 @@
   display: flex;
 }
 
-.column-full {
+.column-full,
+.bored-sponge-img {
   width: 100%;
 }
 
